<resources>
    <string name="app_name">My Meal Bag</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Full Name</string>
    <string name="prompt_mobile">Mobile</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_mobile">This mobile number is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_home">My Meal Bag</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Side bar menu names-->
    <string name="sidebar_menu_favorite">Favourite</string>
    <string name="sidebar_menu_ord_history">Order History</string>
    <string name="sidebar_menu_payment_history">Payment History</string>
    <string name="sidebar_menu_faq">FAQ</string>
    <string name="sidebar_menu_contact">Contact</string>
    <string name="sidebar_menu_sign_out">Sign Out</string>

    <string name="action_checkout">Check Out</string>
</resources>
